# simplepinn

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: custom_equations.md
examples/: advection_1d.py  burgers_1d.py  heat_1d.py  heat_easy.py  inverse_heat_alpha.py  laplace_1d.py  poisson_1d.py  solve_heat.py  wave_1d.py
gui/: app.py
simplepinn/: __init__.py  presets.py
simplepinn/boundaries/: __init__.py  dirichlet.py  function.py  neumann.py  sinusoidal.py
simplepinn/core/: __init__.py  equation.py  grad.py  network.py  pinn.py  problem.py
simplepinn/equations/: __init__.py  advection.py  base.py  burgers.py  heat.py  laplace.py  poisson.py  wave.py
simplepinn/samplers/: __init__.py  adaptive.py  latin_hypercube.py  uniform.py
simplepinn/viz/: __init__.py  plot.py
tests/: README.md  test_equations.py  test_framework_features.py  test_prediction.py  test_public_api.py
