[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simplepinn"
version = "0.1.0"
description = "Beginner-friendly Physics-Informed Neural Networks in PyTorch"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0",
    "matplotlib>=3.7",
    "numpy>=1.23"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["simplepinn*"]
